--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
               </div>
           </div>
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
-            <div id="imgContainer">
+            <!-- <div id="imgContainer">
               <img class="image" src="https://i.postimg.cc/7PT9Sk37/01.png" alt="PerkPunchExampleOne" />
               <img class="image" src="https://i.postimg.cc/m2B9hf8t/02.png" alt="PerkPunchExampleTwo" />
               <img class="image" src="https://i.postimg.cc/kGcBWGfd/08.png" alt="PerkPunchExampleThree" />
-            </div>
+            </div> -->
             <div class="button-container">
               <a class="about-button" href="https://apps.apple.com/pk/app/perk-punch/id6746662386">AppStore Link</a>
             </div>
@@ -154,11 +154,11 @@
               </div>
           </div>
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
-          <div id="imgContainer">
+          <!-- <div id="imgContainer">
             <img class="image roundeddd" src="https://i.postimg.cc/VLWVbw1Y/Book-Worm1.png" alt="BookWormExampleOne" style="border-radius: 22px;" />
             <img class="image roundeddd" src="https://i.postimg.cc/zXzk6gmc/Book-Worm3.png" alt="BookWormExampleTwo" style="border-radius: 22px;" />
             <img class="image roundeddd" src="https://i.postimg.cc/pXLDqM8B/Book-Worm7.png" alt="BookWormExampleThree" style="border-radius: 22px;" />
-          </div>
+          </div> -->
           <div class="button-container">
               <a class="about-button" href="https://apps.apple.com/us/app/bookworm/id6738531588">AppStore Link</a>
             </div>
